# Control-Systems-TorBox

./: .gitmodules  Cargo.toml  README.md  TODO.md  build.rs  ci_test.bash
.github/workflows/: ci.yml  coverage.yml
examples/: motion_controller.rs  plotting.rs
src/: bode.rs  frequency_response.rs  lib.rs  plot.rs  polynom.rs  slicot_wrapper.rs  slicotrs.rs  ss.rs  tf.rs  traits.rs  transformations.rs  transforms.rs
src/analysis/: frequency_response.rs  mod.rs  system_properties.rs
src/systems/: mod.rs  polynom.rs  state_space.rs  transfer_function.rs
src/utils/: traits.rs
