[package]
name = "control_systems_torbox"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
approx = "0.5.1"
num-complex = "0.4"
egui = "0.31"
egui_plot = "0.31"
eframe = "0.31"
plotters = "0.3.7"
plotters-cairo = "0.7.0"
gtk = { package = "gtk4", version = "0.9" }
plotters-svg = "0.3.7"