[package]
name = "control_systems_torbox"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
approx = "0.5.1"
num-complex = "0.4"
egui = "0.31"
egui_plot = "0.31"
eframe = "0.31"
libc = "0.2"
nalgebra = "0.33"
rayon = "1.10.0"
egui_kittest = {version = "0.31", features = ["eframe"]}
netlib-src = {version = "0.8.0", default-features = false, features = ["static"]}

# BUILD dep
[build-dependencies]
make-cmd = "0.1.0"